objects/ASI_TH_CRM_Turnover_Performance__c.object
<CustomObject>
    <description>ASI_TH_CRM_Turnover_Performance</description>
    <fields>
        <fullName>ASI_TH_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Turnover Performances</relationshipLabel>
        <relationshipName>Turnover_Performances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Full_Month_Comparison_F__c</fullName>
        <formula>TEXT(  ASI_TH_CRM_Full_Month_Comparison__c * 100) &amp; &apos; %&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Month Comparison</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Full_Month_Comparison__c</fullName>
        <label>Full Month Comparison</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Full_Month_LY__c</fullName>
        <label>Full Month LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_JAN_TO_MONTH_Growth_F__c</fullName>
        <formula>TEXT(ASI_TH_CRM_JAN_TO_MONTH_Growth__c * 100) &amp; &apos; %&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JAN-TO-MONTH Growth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_JAN_TO_MONTH_Growth__c</fullName>
        <label>JAN-TO-MONTH Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_JAN_TO_MONTH_LY__c</fullName>
        <label>JAN-TO-MONTH LY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_JAN_TO_MONTH_TY__c</fullName>
        <label>JAN-TO-MONTH TY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Jan_To_Date_Growth_F__c</fullName>
        <formula>TEXT(  ASI_TH_CRM_Jan_To_Date_Growth__c * 100) &amp; &apos; %&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jan-To-Date Growth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Jan_To_Date_Growth__c</fullName>
        <label>Jan-To-Date Growth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Jan_To_Date_LY__c</fullName>
        <label>Jan-To-Date LY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Jan_To_Date_TY__c</fullName>
        <label>Jan-To-Date TY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Last_Month__c</fullName>
        <label>Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_MTD_Growth_F__c</fullName>
        <formula>TEXT(   ASI_TH_CRM_MTD_Growth__c * 100)&amp; &apos; %&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Growth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_MTD_Growth__c</fullName>
        <label>MTD Growth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_MTD_LY__c</fullName>
        <label>MTD LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_MTD_TY__c</fullName>
        <label>MTD TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Monthly_Growth_F__c</fullName>
        <formula>TEXT(  ASI_TH_CRM_Monthly_Growth__c * 100) &amp; &apos; %&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Growth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Monthly_Growth__c</fullName>
        <label>Monthly Growth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_TP_EXID__c</fullName>
        <externalId>true</externalId>
        <label>Turnover Performance External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_This_Month__c</fullName>
        <label>This Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_YTD_Growth_F__c</fullName>
        <formula>TEXT(  ASI_TH_CRM_YTD_Growth__c * 100)&amp;&apos; %&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Growth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_YTD_Growth__c</fullName>
        <label>YTD Growth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_YTD_LY__c</fullName>
        <label>YTD LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_YTD_TY__c</fullName>
        <label>YTD TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_YTM_Growth_F__c</fullName>
        <formula>TEXT(  ASI_TH_CRM_YTM_Growth__c * 100) &amp; &apos; %&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTM Growth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_YTM_Growth__c</fullName>
        <label>YTM Growth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_YTM_LY__c</fullName>
        <label>YTM LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Turnover Performance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TP-{0000}-TH</displayFormat>
        <label>TP No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Turnover Performances</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_Turnover_Performance</fullName>
        <active>true</active>
        <label>TW Turnover Performance</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_Turnover_Performance</fullName>
        <active>true</active>
        <label>TH CRM Turnover Performance</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>